# real-life-rts-unit

./: .gitignore  README.md  docker-compose.yml
app/: .env-sample  Dockerfile  main.py  mqtt_utils.py  opencv_utils.py  pyproject.toml  settings.py
esp32_wokwi_prototip/: README.md  sketch.ino
